# worker_manager

./: README.md  setup.cfg
src/worker_manager/: worker_manager.py
src/worker_manager.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_worker_manager.py
