[metadata]
name = worker_manager
version = 0.0.1
author = Varcade Games
author_email = author@example.com
description = Worker manager for Varcade Games
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Kalarebka/worker_manager
project_urls =
    Bug Tracker = https://github.com/Kalarebka/worker_manager/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src